deployments/kubernetes-dashboard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: kubernetes-dashboard
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: kubernetes-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kubernetes-dashboard-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: "kdash.polyvaria.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
